[feat] update club, event, member, board manager